# chedd-medd

./: README.md
backend/: CMakeLists.txt  ads.db  db_backend.cpp
backend/database/: database.hpp  sqlite3_db.hpp
